Don't return the visited set from PathFinding.bestPath